--- a/timer/src/styles/_variables.scss
+++ b/timer/src/styles/_variables.scss
@@ -2,3 +2,7 @@ $grey: #333;
 
 $navigation-bg: $grey;
 $navigation-color: #efefef;
+
+$clock-text-color: #fff;
+$clock-bg-color: #b5d0e2;
+$clock-border-color: #2099e8;
