--- a/timer/src/styles/_clock.scss
+++ b/timer/src/styles/_clock.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 4rem auto 2rem;
+    margin: 1rem auto 2rem;
     width: 14rem;
     height: 14rem;
     background-color: $clock-bg-color;
@@ -14,4 +14,9 @@
     color: $clock-text-color;
     font-size: 2.25rem;
     font-weight: 300;
+}
+
+.page-title {
+    margin: 3rem 0 0;
+    text-align: center;
 }
